Use go-build for commands and add a workspace

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,4 +28,4 @@ jobs:
           cache-dependency-path: "**/go.sum"
 
       - name: run tests and lints
-        run: go run ./build -v check
+        run: go run ./build check
